--- a/src/content/posts/cored20rpg/magic-changed-5e-spells.mdx
+++ b/src/content/posts/cored20rpg/magic-changed-5e-spells.mdx
@@ -121,7 +121,7 @@ author: Антон "Palant" Палихов
 
 Классы: Колдун
 
-Трескучий разряд синей энергии обрушивается на суще¬ство в пределах дистанции, создавая между вами и целью постоянную дугу-молнию. Совершите дальнобойную атаку заклинанием по этому существу. При попадании цель получает 1к12 урона молнией, а в начале каждого вашего последующего хода, пока длится заклинание, вы можете использовать действие или бонусное действие, чтобы автоматически нанести цели ещё 1к12 урона молнией. Заклинание прекращает действовать, если вы потратите действие на что-либо ещё.
+Трескучий разряд синей энергии обрушивается на существо в пределах дистанции, создавая между вами и целью постоянную дугу-молнию. Совершите дальнобойную атаку заклинанием по этому существу. При попадании цель получает 1к12 урона молнией, а в начале каждого вашего последующего хода, пока длится заклинание, вы можете использовать действие или бонусное действие, чтобы автоматически нанести цели ещё 1к12 урона молнией. Заклинание прекращает действовать, если вы потратите действие на что-либо ещё.
 
 Заклинание также прекращается будет полностью укрыта от вас.
 
@@ -143,11 +143,11 @@ author: Антон "Palant" Палихов
 
 Существо, ставшее целью этого заклинания, должно совершить спасбросок Ловкости. При провале цель получает 10к8 + 40 силового урона, а при успешном спасброске половину этого урона Если этот урон оставляет цель с 0 хитов, она дезинтегрирована.
 
-Дезинтегрированное существо и всё, что оно носит или держит, кроме магических предметов, превраща¬ется в кучку мелкой серой пыли. Существо можно вер¬нуть к жизни только заклинаниями истинное воскрешение или желание.
+Дезинтегрированное существо и всё, что оно носит или держит, кроме магических предметов, превращается в кучку мелкой серой пыли. Существо можно вернуть к жизни только заклинаниями истинное воскрешение или желание.
 
-Заклинание автоматически дезинтегрирует любой немагический объект или творение магической силы, если они крупного размера или меньше. Если цель огромного размера или более, заклинание дезинте¬грирует только её часть объёмом с ю-футовый куб. На магические предметы заклинание не действует.
+Заклинание автоматически дезинтегрирует любой немагический объект или творение магической силы, если они крупного размера или меньше. Если цель огромного размера или более, заклинание дезинтегрирует только её часть объёмом с ю-футовый куб. На магические предметы заклинание не действует.
 
-**Используя более высокий круг:** Если вы сотворяете это заклинание, используя ячейку 7-го круга или выше, урон увеличива¬ется на 3к8 за каждый круг ячейки выше 6-го.
+**Используя более высокий круг:** Если вы сотворяете это заклинание, используя ячейку 7-го круга или выше, урон увеличивается на 3к8 за каждый круг ячейки выше 6-го.
 ### <a name="_toc151741069"></a><a name="_toc158169081"></a><a name="_toc160586898"></a>Дубовая кожа
 *2-й круг, трансмутация, друид, рейнджер*
 
@@ -163,7 +163,7 @@ author: Антон "Palant" Палихов
 
 Прикоснитесь к согласному существу. Пока длится заклинание, его кожа будет выглядеть грубой, как кора, а КЗ цели не сможет стать ниже 16 вне зависимости от надетой брони.
 
-**Используя более высокий круг:** Если вы сотворяете это заклина¬ние, используя ячейку 3-го круга или выше, то КЗ цели увеличивается на 1 за каждый круг ячейки выше 2-ого.
+**Используя более высокий круг:** Если вы сотворяете это заклинание, используя ячейку 3-го круга или выше, то КЗ цели увеличивается на 1 за каждый круг ячейки выше 2-ого.
 ### <a name="_toc151741080"></a><a name="_toc158169092"></a><a name="_toc160586899"></a>Завеса стрел
 *2-й круг, трансмутация, рейнджер*
 
@@ -193,11 +193,11 @@ author: Антон "Palant" Палихов
 
 Классы: Волшебник
 
-Выберите заклинание не выше 5-го круга, которое вы можете сотворить на себя и со временем сотворения в 1 действие. Сотворите это заклинание — так называе¬мое заготовленное заклинание — как часть заклинания заготовка, потратив ячейки заклинаний на оба. Однако заготовленное заклинание не оказывает эффект, пока не наступят определённые условия. Опишите условия, творя эти заклинания. К примеру, дыхание под водой, сотворённое с заготовкой, может вступить в действие, когда вы окажетесь под водой или в иной жидкости.
+Выберите заклинание не выше 5-го круга, которое вы можете сотворить на себя и со временем сотворения в 1 действие. Сотворите это заклинание — так называемое заготовленное заклинание — как часть заклинания заготовка, потратив ячейки заклинаний на оба. Однако заготовленное заклинание не оказывает эффект, пока не наступят определённые условия. Опишите условия, творя эти заклинания. К примеру, дыхание под водой, сотворённое с заготовкой, может вступить в действие, когда вы окажетесь под водой или в иной жидкости.
 
 Заготовленное заклинание вступает в действие немедленно, как только впервые наступает указанное условие, хотите вы того или нет. После этого заготовка прекращается.
 
-Заготовленное заклинание оказывает эффект только на вас, даже если обычно действует и на других существ. Вы можете использовать только одно заклинание заго¬товка одновременно. Если сотворить это заклинание снова, эффект предыдущего заклинания заготовка прекращается. Также заготовка прекращается, если статуэтка-реагент более не при вас.
+Заготовленное заклинание оказывает эффект только на вас, даже если обычно действует и на других существ. Вы можете использовать только одно заклинание заготовка одновременно. Если сотворить это заклинание снова, эффект предыдущего заклинания заготовка прекращается. Также заготовка прекращается, если статуэтка-реагент более не при вас.
 
 **Используя более высокий круг:** При сотворении этого заклинания ячейкой 7-го и выше круга, круг заготовленного заклинания увеличивается на 1 за каждый круг ячейки выше 6-го.
 ### <a name="_toc151741085"></a><a name="_toc158169097"></a><a name="_toc160586901"></a>Замедление
@@ -213,13 +213,13 @@ author: Антон "Palant" Палихов
 
 Классы: волшебник, чародей, бард
 
-Вы меняете ход времени для не более чем шести выбран¬ных вами существ в 40-футовом кубе в пределах дистан¬ции. Каждая цель должна совершить спасбросок Мудрости. При провале она попадает под влияние заклинания, пока оно длится.
+Вы меняете ход времени для не более чем шести выбранных вами существ в 40-футовом кубе в пределах дистанции. Каждая цель должна совершить спасбросок Мудрости. При провале она попадает под влияние заклинания, пока оно длится.
 
-Скорость цели под влиянием заклинания снижается вдвое. Цель получает штраф -2 к КЗ и спасброскам Ловкости и не может совершать ответные действия. В свой ход она может использовать либо действие, либо бонусное действие, но не оба. Вне зависимости от спо¬собностей и магических предметов, существо не может совершить более одной атаки (дистанционной или ближнего боя) в свой ход.
+Скорость цели под влиянием заклинания снижается вдвое. Цель получает штраф -2 к КЗ и спасброскам Ловкости и не может совершать ответные действия. В свой ход она может использовать либо действие, либо бонусное действие, но не оба. Вне зависимости от способностей и магических предметов, существо не может совершить более одной атаки (дистанционной или ближнего боя) в свой ход.
 
 Если существо попытается сотворить заклинание, время сотворения которого составляет і действие, бросьте к20. Если выпало 11 или больше, заклинание не начнёт действовать до следующего хода существа, и существо должно потратить действие в следующий ход, чтобы завершить заклинание. Если оно не сможет этого сделать, заклинание потрачено зря.
 
-Существо, попавшее под влияние заклинания, снова проходит испытание Мудрости в конце каждого своего хода. При успехе заклинание прекращает дей¬ствовать на него.
+Существо, попавшее под влияние заклинания, снова проходит испытание Мудрости в конце каждого своего хода. При успехе заклинание прекращает действовать на него.
 
 **Используя более высокий круг:** Если вы используете ячейку 4-ого круга или выше, то вы можете выбрать целью заклинания дополнительно одну цель за каждый круг ячейки выше 3-его.
 ### <a name="_toc151741120"></a><a name="_toc158169132"></a><a name="_toc160586902"></a>Лечение ран
@@ -251,9 +251,9 @@ author: Антон "Palant" Палихов
 
 Классы: клерик,  друид,  бард
 
-Выбранное вами существо, которое вы видите в преде¬лах дистанции, восстанавливает хитов в количестве 1к6 + модификатор вашей заклинательной характеристики. Заклинание не действует на нежить и конструкции.
+Выбранное вами существо, которое вы видите в пределах дистанции, восстанавливает хитов в количестве 1к6 + модификатор вашей заклинательной характеристики. Заклинание не действует на нежить и конструкции.
 
-**Используя более высокий круг:** Если вы сотворяете это заклинание, используя ячейку 2-го круга или выше, исцеление увели¬чивается на 1к6 за каждый круг ячейки выше 1-го.
+**Используя более высокий круг:** Если вы сотворяете это заклинание, используя ячейку 2-го круга или выше, исцеление увеличивается на 1к6 за каждый круг ячейки выше 1-го.
 ### <a name="_toc151741123"></a><a name="_toc158169135"></a><a name="_toc160586904"></a>Каменная кожа
 *4-й круг, преграждение, волшебник, чародей*
 
@@ -281,9 +281,9 @@ author: Антон "Palant" Палихов
 
 Класс: волшебник, колдун
 
-Касание вашей руки, облечённой в тень, способно выса¬сывать жизненную силу из других, чтобы исцелять ваши раны. Совершите атаку заклинанием в ближнем бою по существу в пределах вашей зоны досягаемости. При попадании цель получает 3к8 некротического урона, а вы восстанавливаете хиты в количестве, равном половине нанесённого урона. Пока длится заклинание, можете Действием повторять эту атаку в любой ваш ход. Если вы обладаете особенностью Дополнительная атака вы можете совершать несколько атак заклинанием за одно действие.
+Касание вашей руки, облечённой в тень, способно высасывать жизненную силу из других, чтобы исцелять ваши раны. Совершите атаку заклинанием в ближнем бою по существу в пределах вашей зоны досягаемости. При попадании цель получает 3к8 некротического урона, а вы восстанавливаете хиты в количестве, равном половине нанесённого урона. Пока длится заклинание, можете Действием повторять эту атаку в любой ваш ход. Если вы обладаете особенностью Дополнительная атака вы можете совершать несколько атак заклинанием за одно действие.
 
-**Используя более высокий круг:** Если вы сотворяете это заклинание, используя ячейку 4-го круга или выше, урон увеличива¬ется на 1к8 за каждый круг ячейки выше 3-го.
+**Используя более высокий круг:** Если вы сотворяете это заклинание, используя ячейку 4-го круга или выше, урон увеличивается на 1к8 за каждый круг ячейки выше 3-го.
 ### <a name="_toc151741129"></a><a name="_toc158169141"></a><a name="_toc160586906"></a>Кислотная стрела
 *2-й круг, эвокация, волшебник, колдун*
 
@@ -297,9 +297,9 @@ author: Антон "Palant" Палихов
 
 Классы: волшебник, колдун
 
-Мерцающая зелёная стрела поражает цель в пределах дистанции и взрывается брызгами кислоты. Совершите дальнобойную атаку заклинанием по цели. При попа¬дании цель получит 6к4 урона кислотой немедленно и 3к4 урона кислотой в конце своего следующего хода. При промахе стрела обрызгивает цель кислотой на половину начального урона, а в конце следующего хода урона не будет
+Мерцающая зелёная стрела поражает цель в пределах дистанции и взрывается брызгами кислоты. Совершите дальнобойную атаку заклинанием по цели. При попадании цель получит 6к4 урона кислотой немедленно и 3к4 урона кислотой в конце своего следующего хода. При промахе стрела обрызгивает цель кислотой на половину начального урона, а в конце следующего хода урона не будет
 
-**Используя более высокий круг:** Если вы сотворяете это заклина¬ние, используя ячейку 3-го круга или выше, урон (как начальный, так и последующий) увеличивается на 3к4 за каждый круг ячейки выше 2-го. 
+**Используя более высокий круг:** Если вы сотворяете это заклинание, используя ячейку 3-го круга или выше, урон (как начальный, так и последующий) увеличивается на 3к4 за каждый круг ячейки выше 2-го. 
 ### <a name="_toc151741147"></a><a name="_toc158169159"></a><a name="_toc160586907"></a>Леденящее прикосновение
 Заговор, некромантия, волшебник, колдун, чародей
 
@@ -347,7 +347,7 @@ author: Антон "Palant" Палихов
 
 Волна исцеляющей энергии изливается из выбранной вами точки в пределах дистанции. Выберите не более шести существ в сфере радиусом 30 футов вокруг этой точки. Каждая цель восстанавливает хитов в количестве 3к10 + модификатор вашей заклинательной характеристики. Заклинание не действует на нежить и конструкции.
 
-**Используя более высокий круг:** Если вы сотворяете это заклинание, используя ячейку 6-го круга или выше, исцеление увели¬чивается на 2к10 за каждый круг ячейки выше 5-го.
+**Используя более высокий круг:** Если вы сотворяете это заклинание, используя ячейку 6-го круга или выше, исцеление увеличивается на 2к10 за каждый круг ячейки выше 5-го.
 ### <a name="_toc151741171"></a><a name="_toc158169183"></a><a name="_toc160586910"></a>Массовое лечащее слово
 *3-й круг, призывание (лечение), клерик, бард, друид*
 
@@ -363,7 +363,7 @@ author: Антон "Palant" Палихов
 
 Вы произносите слова исцеления, и не более шести существ на ваш выбор, которых вы видите в пределах дистанции, восстанавливают хитов в количестве 3к6+ модификатор вашей заклинательной характеристики. Заклинание не действует на нежить и конструкции.
 
-**Используя более высокий круг:** Если вы сотворяете это заклинание, используя ячейку 4-го круга или выше, исцеление увели¬чивается на 1к6 за каждый круг ячейки выше 3-го.
+**Используя более высокий круг:** Если вы сотворяете это заклинание, используя ячейку 4-го круга или выше, исцеление увеличивается на 1к6 за каждый круг ячейки выше 3-го.
 ### <a name="_toc151741179"></a><a name="_toc158169191"></a><a name="_toc160586911"></a>Метка охотника
 *1-й круг, прорицание, рейнджер*
 
@@ -377,7 +377,7 @@ author: Антон "Palant" Палихов
 
 Классы: рейнджер
 
-Вы выбираете существо, которое видите в пределах дистанции, и магически отмечаете его как свою добычу. Пока длится заклинание, вы наносите цели дополни¬тельно 1к6 урона каждый раз, когда попадаете по ней атакой оружием, и у вас преимущество к проверкам Восприятия и Выживания для поиска её. Если хитов цели снижаются до 0, прежде чем заклинание прекращает действовать, вы можете исполь¬зовать бонусное действие в свой следующий ход, чтобы отметить новое существо.
+Вы выбираете существо, которое видите в пределах дистанции, и магически отмечаете его как свою добычу. Пока длится заклинание, вы наносите цели дополнительно 1к6 урона каждый раз, когда попадаете по ней атакой оружием, и у вас преимущество к проверкам Восприятия и Выживания для поиска её. Если хитов цели снижаются до 0, прежде чем заклинание прекращает действовать, вы можете использовать бонусное действие в свой следующий ход, чтобы отметить новое существо.
 
 **Используя более высокий круг:** Если вы сотворяете это заклинание, используя ячейку 3-го или 4-го круга, то длительность действия заклинания будет составлять 8 часов и не будет требоваться концентрация. Если использовать ячейку 5-го круга или выше длительность действия заклинания будет составлять 24 часа и не будет требоваться концентрация.
 ### <a name="_toc151741216"></a><a name="_toc158169228"></a><a name="_toc160586912"></a>Огненный щит
@@ -395,7 +395,7 @@ author: Антон "Palant" Палихов
 
 Тонкие подвижные язычки пламени охватывают ваше тело, пока длится заклинание, испуская яркий свет в радиусе 10 футов и тусклый ещё на ю футов. Вы можете досрочно прекратить заклинание, потратив действие.
 
-Пламя даёт вам тёплый или морозный щит на ваш выбор. Тёплый щит даёт вам устойчивость к урону холо¬дом, а морозный — к урону огнём.
+Пламя даёт вам тёплый или морозный щит на ваш выбор. Тёплый щит даёт вам устойчивость к урону холодом, а морозный — к урону огнём.
 
 Кроме того, когда существо в пределах 5 футов от вас попадает по вам атакой ближнего боя, щит извергает пламя. Атакующий получает 2к8 урона огнём от тёплого щита или 2к8 урона холодом от морозного.
 ### <a name="_toc151741243"></a><a name="_toc158169255"></a><a name="_toc160586913"></a>Пламенный клинок
@@ -447,7 +447,7 @@ author: Антон "Palant" Палихов
 
 Классы: рейнджер
 
-Вы метаете немагическое оружие или стреляете немаги¬ческим боеприпасом в воздух и выбираете точку в пре¬делах дистанции. Сотни копий использованного вами боеприпаса или оружия обрушиваются залпом с небес, а затем исчезают. Каждое существо в цилиндре радиу¬сом 40 футов и высотой 20 футов с центром в выбранной точке должно совершить спасбросок Ловкости. Существо получает 8к8 урона при провале или половину этого урона при успехе. Тип урона тот же, что у использован¬ного оружия или боеприпаса.
+Вы метаете немагическое оружие или стреляете немагическим боеприпасом в воздух и выбираете точку в пределах дистанции. Сотни копий использованного вами боеприпаса или оружия обрушиваются залпом с небес, а затем исчезают. Каждое существо в цилиндре радиусом 40 футов и высотой 20 футов с центром в выбранной точке должно совершить спасбросок Ловкости. Существо получает 8к8 урона при провале или половину этого урона при успехе. Тип урона тот же, что у использованного оружия или боеприпаса.
 ### <a name="_toc151741295"></a><a name="_toc158169307"></a><a name="_toc160586916"></a>Призыв скакуна
 *2-й круг, воплощение (ритуал), паладин, уникальное*
 
@@ -459,17 +459,17 @@ author: Антон "Palant" Палихов
 
 **Длительность:** Постоянная
 
-Классы: паладин
+**Классы:** паладин
 
-Вы вызываете дух, который принимает форму необычайно умного, сильного и верного скакуна, создавая с ним длительную связь. Скакун приходит в форме, которую вы выбираете, от боевого коня, пони, оленя или боевой собаки, которую ваш ГМ может разрешить призывать другим животным в качестве скакуна). Скакун имеет характеристики выбранной формы (небожитель, фея или исчадие на ваш выбор) вместо своего обычного типа. Кроме того, если ваш скакун имеет Интеллект 5 или меньше, его Интеллект становится равным 6, и он получает способность понимать один язык, на котором вы говорите.
+Вы вызываете дух, который принимает форму необычайно умного, сильного и верного скакуна, создавая с ним длительную связь. Скакун приходит в форме, которую вы выбираете, от боевого коня, пони, оленя или боевой собаки, которую ваш ГМ может разрешить призывать другим животным в качестве скакуна). Скакун имеет характеристики выбранной формы, хотя его тип - небожитель, фея или исчадие на ваш выбор вместо своего обычного типа. Кроме того, если ваш скакун имеет Интеллект 5 или меньше, его Интеллект становится равным 6, и он получает способность понимать один язык, на котором вы говорите.
 
 Ваш скакун служит вам ездовым животным как в бою, так и вне его, и у вас есть инстинктивная связь с вашим скакуном, которая позволяет вам сражаться как единое целое. Сидя верхом на своем скакуне, вы можете выбрать, чтобы любое заклинание, которое вы сотворяете, нацеленное только на вас, также воздействовало на вашего скакуна таким же образом.
 
-Когда хиты скакуна падают до 0, он исчезает, не оставляя физической формы. Вы также можете в любой момент действием отпустить своего скакуна, заставив его исчезнуть, и это не разорвет вашу связь с ним. Скакун не может снова появиться, пока вы снова не произнесете это заклинание, призывающее вашего связанного скакуна.
+Когда хиты скакуна снижаются до 0, он исчезает, не остав­ляя физического тела. Вы также можете в любой момент действием отпустить своего скакуна, заставив его исчезнуть, и это не разорвет вашу связь с ним. Скакун не может снова появиться, пока вы снова не сотворите это заклинание, призывающее вашего связанного скакуна.
 
 Пока вы находитесь в пределах 1 мили от своего скакуна, вы можете общаться с ним телепатически.
 
-Вы можете освободить скакуна от его связи в любое время. Это прекращает эффект. Вы не можете иметь более одного скакуна, связанного этим заклинанием одновременно.
+Действием вы можете освободить скакуна от уз в любой момент, после чего он исчезнет. Вы не можете иметь более одного скакуна, связанного этим заклинанием одновременно.
 
 **Используя более высокий круг:** Когда вы сотворяете это заклинание, используя ячейку заклинаний 4-го круга, вы можете привязать гиппогрифа, грифона или пегаса в качестве скакуна. Когда вы сотворяете это заклинание, используя ячейку заклинаний 5-го круга, вы можете привязать кошмара или единорога в качестве скакуна.
 ### <a name="_toc151741389"></a><a name="_toc158169401"></a><a name="_toc160586917"></a>Стрела-молния
@@ -503,7 +503,7 @@ author: Антон "Palant" Палихов
 
 **Длительность:** Концентрация, до 1 минуты.
 
-Выберите согласное существо, которое видите в преде¬лах дистанции. Пока длится заклинание, скорость цели удваивается, она получает бонус +2 к КБ, преимущество к спасброскам Ловкости и дополнительное действие в каждый свой ход. Это действие можно использовать только для совершения действий Атаковать (только 1 атака), Рывок, Отступление, Засада, Использование объекта или сотворение заговора
+Выберите согласное существо, которое видите в пределах дистанции. Пока длится заклинание, скорость цели удваивается, она получает бонус +2 к КБ, преимущество к спасброскам Ловкости и дополнительное действие в каждый свой ход. Это действие можно использовать только для совершения действий Атаковать (только 1 атака), Рывок, Отступление, Засада, Использование объекта или сотворение заговора
 
 Когда заклинание прекращает действовать, цель не может ни перемещаться, ни совершать действия до конца своего следующего хода — её охватывает слабость.
 
@@ -535,183 +535,3 @@ author: Антон "Palant" Палихов
 [ИНДЕКС CORE D20 RPG](https://cyborgsandmages.com/cored20rpg/1)
 
 [СТАТЬИ СВЯЗАННЫЕ С РАЗРАБОТКОЙ CORE D20 RPG](https://cyborgsandmages.com/core-d20/1)
-
----
-
-ЗАКЛИНАНИЯ
-
-Убрана формулировка, определяющая, как относиться к инициативе призываемого существа.
-
-Когда вы разыгрываете Ауру Жизнеспособности, используя ячейку заклинания 4-го круга или выше, она восстанавливает 1к6 дополнительных хит-пойнтов за каждый ячейку уровня выше 3-го.
-
-Существо под действием Bane вычитает к6, а не к4 из своих бросков атаки и спасбросков.
-
-Blade Ward теперь имеет дистанцию касания, наделяя устойчивостью существо, которого вы коснулись.
-
-Chromatic Orb наносит 4d8 урона вместо 3d8.
-
-В "Круге смерти" теперь указано, что существо, которому заклинание нанесло урон до 0 хит, немедленно погибает.
-
-Существо, пораженное Color Spray, одновременно ослепляется и становится недееспособным.
-
-В заклинании "Призывать животных" говорится, что вы можете попытаться вызвать определенных существ, но в конечном итоге ГМ решает, какие существа появятся при произнесении заклинания.
-
-Заклинание "Призыв ярости" наносит 6d8 урона вместо 3d8.
-
-В заклинаниях "Вызвать Фею", "Вызвать малых элементалей" и "Вызвать лесных существ" говорится, что вы можете попытаться вызвать конкретных существ, но ГМ в конечном итоге решает, какие существа появятся при сотворении заклинания.
-
-Cordon of Arrows наносит 2к6 урона вместо 1к6.
-
-Crown of Madness не требует от вас использовать действие в последующие ходы, чтобы сохранить контроль над целью.
-
-Танцующие огни не требуют концентрации, но при повторном применении заклинания оно заканчивается раньше времени.
-
-Бонус и штраф к урону от "Увеличить/уменьшить" составляет 1к6, а не 1к4.
-
-Ensnaring Strike наносит 2к6 урона, а не 1к6.
-
-Enthrall не дает Спасброска на устойчивость к его эффектам, но существа, не поддающиеся очарованию, невосприимчивы к его эффектам.
-
-Укус не требует концентрации и длится 1 минуту.
-
-Удар пламени наносит 6d6 урона огнем и 6d6 лучистого урона вместо 4d6 каждого. При использовании слота заклинания 6-го уровня или выше урон от огня и лучистый урон увеличиваются на 1к6.
-
-Длительность заклинания "Друзья" теперь составляет до 10 минут.
-Когда существо получает психический урон от Geas, его максимум хитов уменьшается на величину полученного психического урона, минимум до 1. Это уменьшение длится до окончания заклинания.
-
-Когда вы произносите заклинание "Гис", используя слот заклинания 2-го уровня или выше, размеры площади увеличиваются на 5 футов за каждый круг ячейки выше 1-го.
-
-Град терний наносит 2д6 колющего урона вместо 1д10, и этот урон увеличивается на 1к6 за каждый круг ячейки выше 1-го (максимум 6д6).
-Всякий раз, когда существо, находящееся под влиянием Героизма, делает бросок атаки или спасбросок, оно может бросить к4 и добавить его к результату.
-
-Inflict Wounds наносит 4d10 урона вместо 3d10.
-
-Если Молния попадает в твердую поверхность из дерева, камня или металла, она отражается от нее под углом, равным и противоположным углу попадания, и так продолжается до тех пор, пока ее общая длина не составит 100 футов или пока она не отразится 3 раза. Каждое существо на любой из его длин становится целью заклинания, хотя одно и то же существо не может быть поражено одной и той же молнией более одного раза.
-
-Магическое оружие может воздействовать как на магическое, так и на немагическое оружие. Магическое оружие получает бонус к атаке и броскам урона только в том случае, если у него еще нет такого бонуса. Вы можете коснуться естественного оружия существа (например, когтей или зубов), чтобы получить бонус к этому естественному оружию, или коснуться рук или ног гуманоида, чтобы получить бонус к безоружным ударам существа.
-
-При попадании стрела Кислоты Мелфа наносит 6к4 урона вместо 4к4.
-Меч Морденкайнена наносит 7d10 урона вместо 3d10.
-
-Pass Without Trace теперь указывает, что существо должно находиться в пределах 30 футов от вас, чтобы воспользоваться его эффектами.
-
-Phantasmal Сила теперь указывает, что созданная иллюзия не дает никакой физической устойчивости, даже если цель считает ее реальной. Также она наносит 2к6 урона вместо 1к6.
-
-Существо, которому урон от "Призрачного убийцы" снижает хит до 0, немедленно умирает.
-
-Третий абзац "Полиморфа" вместо этого гласит следующее: "Цель получает количество временных хит-пойнтов, равное хит-пойнтам ее новой формы. Эти временные хит-пойнты не могут быть заменены временными хит-пойнтами из другого источника. Цель возвращается в свою обычную форму, когда у нее больше не остается временных хитов или она умирает. Если заклинание заканчивается раньше, существо теряет все свои временные хит-пойнты и возвращается в свою обычную форму."
-
-Когда вы произносите заклинание "Защита от энергии", используя ячейку заклинания 4-го круга или выше, вы можете выбрать целью еще 1 существо за каждый круг ячейки выше 3-го.
-
-Луч болезни наносит 3д8 урона вместо 2д8.
-
-Дистанция действия Дистанции составляет 30 футов. Первое предложение теперь гласит: "Выберите одно существо в радиусе действия".
-
-Stoneskin больше не требует концентрации и дает 25 временных хитов. 
-
-На более высоких уровнях она дает дополнительные 10 хитов за уровень.
-
-Солнечный луч наносит 8d8 урона вместо 6d8.
-
-Четвертый пункт "Истинного полиморфа" теперь читается так же, как и третий пункт "Полиморфа", как написано выше.\
-
-True Strike теперь дает преимущество при первом броске атаки против цели до конца вашего следующего хода, даже если он сделан не вами. Больше не требует концентрации.
-
-Кости урона от Vampiric Touch теперь равны d8, а не d6.
-
-Когда вы сотворяете это заклинание, используя ячейку заклинания 3-го круга или выше, размеры куба увеличиваются на 5 футов за каждый круг ячейки выше 2-го.
-
-Чтобы нанести урон цели после первоначального применения заклинания "Ведьмин болт", требуется бонусное действие, а не действие. 
-
-Дистанция действия составляет 60 футов.
-
-Aganazaar's Scorcher наносит 4d8 урона от огня, вместо 3d8.
-
-Болт Хаоса наносит 2d8 + 2d6 урона, вместо 2d8 + 1к6.
-
-Создание костра не требует концентрации, но она заканчивается раньше, если вы произнесете заклинание еще раз.
-
-Урон от Дыхания Дракона составляет 3д8, а не 3д6.
-
-Кости урона для Dust Devil равны d10, а не d8.
-
-Урон от "Дрожи земли" составляет 2к6, а не 1к6.
-
-Урон от Erupting Earth составляет 4d10 вместо 3d12.
-
-Урон от огня "Огненных стрел" составляет 1д10, а не 1к6.
-
-Урон от Священного оружия составляет 2d10, а не 2d8.
-
-Урон от Mind Spike составляет 4d8, а не 3d8.
-
-Primal Savagery наносит рубящий урон когтями или колющий урон зубами 
-вместо урона от кислоты. Этот урон является магическим.
-
-Shape Water уточняет, что замораживание воды не наносит урон предметам.
-
-Написание неба не требует концентрации, но оно заканчивается раньше, если вы сотворите это заклинание еще раз.
-
-Стая снежков Сниллока наносит 5d6 урона холодом вместо 3d6.
-
-Удар стального ветра - заклинание 4-го уровня, наносящее 5d10 урона силой при попадании, вместо заклинания 5-го уровня, наносящего 6d10 урона. 
-
-SPELLS
-Wording that specifies how to treat a conjured creature’s initiative is removed.
-When you cast Aura of Vitality using a spell slot of 4th level or higher, it restores 1d6 additional hit points for each slot level above 3rd.
-A creature under the effects of Bane subtracts a d6, not a d4, from its attack rolls and saving throws.
-Barkskin now no longer requires concentration and reads as follows: “You touch a willing creature. The target’s skin takes on a rough, bark-like appearance for the spell’s duration, during which its base AC becomes 16 if it is not already higher. The creature can benefit from wearing a shield as normal.”
-Blade Ward now has a range of touch, granting the resistance to the creature you touch.
-Chromatic Orb deals 4d8 damage, instead of 3d8.
-Circle of Death now states that a creature reduced to 0 hit points by the spell’s damage is immediately killed.
-A creature affected by Color Spray is both blinded and incapacitated.
-Conjure Animals states that you can try to summon specific creatures, but the DM ultimately decides which creatures appear when you cast the spell.
-Conjure Barrage deals 6d8 damage, instead of 3d8.
-Conjure Fey, Conjure Minor Elementals, and Conjure Woodland Beings state that you can try to summon specific creatures, but the DM ultimately decides which creatures appear when you cast the spell.
-Cordon of Arrows deals 2d6 damage, instead of 1d6.
-Crown of Madness does not require you to use your action on subsequent turns to maintain control over the target.
-Dancing Lights does not require concentration, but it ends early if you cast it again.
-The damage bonus and penalty of Enlarge/Reduce is 1d6, instead of 1d4.
-Ensnaring Strike deals 2d6 damage, instead of 1d6.
-Enthrall does not allow a saving throw to resist its effects, but creatures immune to being charmed are immune to its effects.
-Eyebite does not require concentration, instead lasting 1 minute.
-Flame Strike deals 6d6 fire damage and 6d6 radiant damage, instead of 4d6 of each. When you cast the spell using a spell slot of 6th level or higher, both the fire damage and radiant damage increase by 1d6.
-Friends now has a duration of up to 10 minutes.
-When a creature takes psychic damage from Geas, its hit point maximum is reduced by the amount of psychic damage taken, to a minimum of 1. This reduction lasts until the spell ends.
-When you cast Grease using a spell slot of 2nd level or higher, the dimensions of the square increase by 5 feet for each slot level above 1st.
-Hail of Thorns deals 2d6 piercing damage instead of 1d10, and this damage increases by 1d6 for each slot level above 1st (to a maximum of 6d6)
-Whenever a creature affected by Heroism rolls an attack roll or saving throw, it can roll a d4 add it to the result.
-Inflict Wounds deals 4d10 damage, instead of 3d10.
-If Lightning Bolt hits a solid surface made of wood, stone, or metal, it reflects off that surface at an angle equal and opposite the angle at which it hit, continuing to do so until its total length is 100 feet or until it has reflected 3 times. Each creature along any of its lengths becomes a target of the spell, though a creature cannot be targeted by the same lightning bolt more than once.
-Magic Weapon can affect magical weapons as well as nonmagical weapons. A magical weapon only gains the bonus to attack and damage rolls if it does not already have such a bonus. You can touch a creature's natural weapons (such as its claws or teeth) to grant this benefit to that natural weapon, or you can touch a humanoid's arms or legs to grant this benefit to the creature's unarmed strikes.
-On a hit, Melf's Acid Arrow deals 6d4 damage, instead of 4d4.
-Mordenkainen's Sword deals 7d10 damage, instead of 3d10.
-Pass Without Trace now specifies that a creature must be within 30 feet of you to benefit from its effects.
-Phantasmal Force now specifies that the illusion created does not offer any physical resistance, even if the target thinks it is real. It also deals 2d6 damage, instead of 1d6.
-A creature reduced to 0 hit points by the damage of Phantasmal Killer immediately dies.
-The third paragraph of Polymorph instead reads as follows: “The target gains a number of temporary hit points equal to the hit points of its new form. These temporary hit points can't be replaced by temporary hit points from another source. A target reverts to its normal form when it has no more temporary hit points or it dies. If the spell ends before then, the creature loses all its temporary hit points and reverts to its normal form.”
-When you cast Protection from Energy using a spell slot of 4th level or higher, you can target 1 additional creature for each slot level above 3rd.
-Ray of Sickness deals 3d8 damage, instead of 2d8.
-Resistance has a range of 30 feet. Its first sentence now reads, “Choose one creature within range.”
-Stoneskin no longer requires concentration and grants 25 temporary hit points. At higher levels it grants additional 10 hit points per level.
-Sunbeam deals 8d8 damage, instead of 6d8.
-The fourth paragraph of True Polymorph now reads the same as the third paragraph of polymorph, as written above.
-True Strike now grants advantage to the first attack roll against the target before the end of your next turn, even if it is not made by you. It no longer requires concentration.
-The damage dice of Vampiric Touch are d8s, instead of d6s.
-When you cast Web using a spell slot of 3rd level or higher, the dimensions of the cube increase by 5 feet for each slot level above 2nd.
-Witch Bolt requires a bonus action, not an action, to deal damage to the target after it is initially cast. Its range is 60 feet.
-Aganazaar's Scorcher deals 4d8 fire damage, instead of 3d8.
-Chaos Bolt deals 2d8 + 2d6 damage, instead of 2d8 + 1d6.
-Create Bonfire does not require concentration, but it ends early if you cast the spell again.
-The damage for Dragon's Breath is 3d8, instead of 3d6.
-The damage dice for Dust Devil are d10s, instead of d8s.
-The damage for Earth Tremor is 2d6, instead of 1d6.
-The damage for Erupting Earth is 4d10 instead of 3d12.
-The fire damage of Flame Arrows is 1d10, instead of 1d6.
-The damage for Holy Weapon is 2d10, instead of 2d8.
-The damage for Mind Spike is 4d8, instead of 3d8.
-Primal Savagery deals slashing damage with claws or piercing damage with teeth, instead of acid damage. This damage is magical.
-Shape Water specifies that freezing the water does not deal damage to objects.
-Skywrite does not require concentration, but it ends early if you cast the spell again.
-Snilloc's Snowball Swarm deals 5d6 cold damage, instead of 3d6.
-Steel Wind Strike is a 4th-level spell dealing 5d10 force damage on a hit, instead of a 5th-level spell dealing 6d10 damage. 
